[resolves #62] Add ability to download generated project sources
