# jaxrs/src/main/resources/schema/swagger.yaml
@@ -157,6 +157,39 @@ paths:
           description: "[Unauthorized] If the provided credentials were not valid."
         "404":
           description: "[Not Found] The target file was not found."
+  /user/{userId}/model/{modelId}/{runtime}/sources:
+    get:
+      summary: Download the project sources
+      operationId: downloadProjectSources
+      parameters:
+      - name: userId
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: modelId
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: runtime
+        in: path
+        required: true
+        schema:
+          type: string
+          enum:
+          - standalone
+          - docker
+          - javaee
+      responses:
+        "200":
+          description: "[OK] Found the requested project sources."
+          content:
+            application/octet-stream: {}
+        "401":
+          description: "[Unauthorized] If the provided credentials were not valid."
+        "404":
+          description: "[Not Found] The project source file was not found."
   /user/{userId}/model/{modelId}/{runtime}/status:
     get:
       summary: Get the current build status
@@ -298,12 +331,11 @@ components:
     MavenBuildHandle:
       required:
       - id
-      - location
       type: object
       properties:
         id:
           type: string
-        location:
+        sources:
           type: string
           format: uri
         status:
@@ -314,6 +346,9 @@ components:
           - Success
           - Failure
           - NotFound
+        target:
+          type: string
+          format: uri
     Model:
       required:
       - modelId
